# python-for-computational-economics

./: LICENSE  README.md  pyproject.toml
notebooks/: lecture0_python.ipynb  lecture1_numpy.ipynb  lecture2_pytorch.ipynb
